<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_yun"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_yun" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_mine" />

    <item
        android:id="@+id/navigation_owns"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/title_owns" />

</menu>